[package]
name = "x402"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
neon = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
